--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "firebase": "^12.8.0",
     "next": "16.1.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
