--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^12.8.0",
+    "gsap": "^3.14.2",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
