--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
